{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 651,
  "lineage": "6ece61bd-b8ab-75be-b7df-949394182839",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:816952374684:route-table/rtb-02e65542534b178e0",
            "default_route_table_id": "rtb-02e65542534b178e0",
            "id": "rtb-02e65542534b178e0",
            "owner_id": "816952374684",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bca91871d566bb4d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0703e0f1d4df5edef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:816952374684:internet-gateway/igw-0bca91871d566bb4d",
            "id": "igw-0bca91871d566bb4d",
            "owner_id": "816952374684",
            "vpc_id": "vpc-0703e0f1d4df5edef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:816952374684:loadbalancer/app/terraformtask/9b671c8905ecf302",
            "arn_suffix": "app/terraformtask/9b671c8905ecf302",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraformtask-1484682874.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:816952374684:loadbalancer/app/terraformtask/9b671c8905ecf302",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraformtask",
            "security_groups": [
              "sg-039af613aa2f484a5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07edb4f13a45b04aa"
              },
              {
                "subnet_id": "subnet-0b8c97e604e5f2463"
              }
            ],
            "subnets": [
              "subnet-07edb4f13a45b04aa",
              "subnet-0b8c97e604e5f2463"
            ],
            "vpc_id": "vpc-0703e0f1d4df5edef",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.main",
            "aws_subnet.main2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tf_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:816952374684:listener/app/terraformtask/9b671c8905ecf302/ecab683b9fe62162",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:816952374684:targetgroup/tftargetgroup/a5fdc077eb5b1d02",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:816952374684:listener/app/terraformtask/9b671c8905ecf302/ecab683b9fe62162",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:816952374684:loadbalancer/app/terraformtask/9b671c8905ecf302",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tf_load_balancer",
            "aws_lb_target_group.tf_task_tg",
            "aws_security_group.security_group",
            "aws_subnet.main",
            "aws_subnet.main2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tf_task_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:816952374684:targetgroup/tftargetgroup/a5fdc077eb5b1d02",
            "arn_suffix": "targetgroup/tftargetgroup/a5fdc077eb5b1d02",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 5,
                "interval": 35,
                "matcher": "200",
                "path": "/",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:816952374684:targetgroup/tftargetgroup/a5fdc077eb5b1d02",
            "lambda_multi_value_headers_enabled": false,
            "name": "tftargetgroup",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "target_type": "lambda"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:816952374684:targetgroup/tftargetgroup/a5fdc077eb5b1d02-20220308122510354100000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:816952374684:targetgroup/tftargetgroup/a5fdc077eb5b1d02",
            "target_id": "arn:aws:lambda:eu-north-1:816952374684:function:xml_file_downloader"
          },
          "dependencies": [
            "aws_iam_role.tf_lambda_iam",
            "aws_lambda_function.xml_file_downloader",
            "aws_lambda_permission.tf_task_perm",
            "aws_lb_target_group.tf_task_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0794dcceaa034c06a",
            "original_route_table_id": "rtb-02e65542534b178e0",
            "route_table_id": "rtb-02e65542534b178e0",
            "vpc_id": "vpc-0703e0f1d4df5edef"
          },
          "dependencies": [
            "aws_default_route_table.route_table",
            "aws_internet_gateway.gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:816952374684:security-group/sg-039af613aa2f484a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039af613aa2f484a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "security_group",
            "name_prefix": "",
            "owner_id": "816952374684",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0703e0f1d4df5edef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:816952374684:subnet/subnet-0b8c97e604e5f2463",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "169.69.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8c97e604e5f2463",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816952374684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0703e0f1d4df5edef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:816952374684:subnet/subnet-07edb4f13a45b04aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "169.69.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07edb4f13a45b04aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816952374684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0703e0f1d4df5edef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:816952374684:vpc/vpc-0703e0f1d4df5edef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "169.69.0.0/16",
            "default_network_acl_id": "acl-0e192112537352eed",
            "default_route_table_id": "rtb-02e65542534b178e0",
            "default_security_group_id": "sg-002811ee882ad0d1c",
            "dhcp_options_id": "dopt-03360dcce99798639",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0703e0f1d4df5edef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e65542534b178e0",
            "owner_id": "816952374684"
          }
        }
      ]
    }
  ]
}